2022-11-15T16:32:19Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3472313361 # 616
* notice: last 14d: unq all: 2 8
* notice: prev accum: outdated-unq outdated-all / unq all: 395 625 / 401 632
* notice: next accum: outdated-unq outdated-all / unq all: 395 625 / 401 633
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-11-15]

2022-11-15T08:30:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3468713441 # 615
* notice: last 14d: unq all: 2 7
* notice: prev accum: outdated-unq outdated-all / unq all: 395 625 / 400 632
* notice: next accum: outdated-unq outdated-all / unq all: 395 625 / 401 632
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-11-01 2022-11-15]

2022-11-15T01:57:18Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3466769706 # 614
* notice: last 14d: unq all: 2 7
* notice: prev accum: outdated-unq outdated-all / unq all: 394 622 / 400 630
* notice: next accum: outdated-unq outdated-all / unq all: 395 625 / 400 632
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-31] / []

2022-11-14T16:33:06Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3463349232 # 613
* notice: last 14d: unq all: 2 8
* notice: prev accum: outdated-unq outdated-all / unq all: 394 622 / 399 630
* notice: next accum: outdated-unq outdated-all / unq all: 394 622 / 400 630
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2022-10-31 2022-11-14]

2022-11-14T08:31:16Z: