@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-15T16:32:19Z",
-  "count_outdated" : 625,
-  "uniques_outdated" : 395,
-  "count" : 633,
+  "timestamp" : "2022-11-16T01:58:07Z",
+  "count_outdated" : 627,
+  "uniques_outdated" : 396,
+  "count" : 634,
   "uniques" : 401,
   "clones" : [
-    {
-      "timestamp": "2022-11-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-11-02T00:00:00Z",
       "count": 2,
