@@ -1,12 +1,7 @@
 {
-  "count": 8,
+  "count": 7,
   "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2022-11-01T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-11-02T00:00:00Z",
       "count": 2,
