@@ -1,3 +1,11 @@
+2022-11-16T01:58:07Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3475728884 # 617
+* notice: last 14d: unq all: 2 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 395 625 / 401 633
+* notice: next accum: outdated-unq outdated-all / unq all: 396 627 / 401 634
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-11-01] / []
+
 2022-11-15T16:32:19Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3472313361 # 616
 * notice: last 14d: unq all: 2 8
